--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="container">
             <div id="cabecera">cabecera</div>
             <div id="post">
-                <h1>Este es el titutlo atractivo e interesante del post</h1>
+                <h1>Este es el titutlo atractivo, interesant y original  del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las
                     cosas increibles que se pueden hacer con una rama</p>
             </div>
