agregado el contenido adicional del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,5 +14,6 @@
         </div>
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio</p>
+        <p>Agregando parrafo adicional.</p>
     </body>
 </html>
