--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="container">
-            <div id="cabecera">cabecera</div>
+            <div id="cabecera">tu blog maestro</div>
             <div id="post">
                 <h1>Este es el titutlo atractivo, interesant y original  del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las
