cambiando cabecer con logo

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,20 +1,26 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
     <head>
+        <meta charset="UTF-8">
         <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
 
     </head>
     <body>
         <div id="container">
-            <div id="cabecera">tu blog maestro</div>
+            <div id="cabecera">
+            <img id="logo" src="imagenes/robot.JPG"/>
+            Hyperblog
+            <span id="tagline">Tu blog de cabecera</span>
+            </div>
             <div id="post">
-                <h1>Este es el titutlo atractivo, interesant y original  del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las
+                <h1>Este es el títutlo atractivo, interesante y original  del post</h1>
+                <p>Y este es el párrafo de inicio donde vamos a explicar las
                     cosas increibles que se pueden hacer con una rama</p>
             </div>
         </div>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
-        <p>Agregando parrafo adicional.</p>
+        <h1>Aquí vamos a hacer un blog post</h1>
+        <p>Y este es el párrafo de inicio</p>
+        <p>Agregando párrafo adicional.</p>
     </body>
 </html>
