agregando footer simple

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,5 +16,6 @@
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio</p>
         <p>Agregando parrafo adicional.</p>
+        <p>agregando footer sencillo</p>
     </body>
 </html>
