--- a/blogpost.html
+++ b/blogpost.html
@@ -20,8 +20,8 @@
             </div>
         </div>
         <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <p>Y este es el párrafo de inicio</p>
         <p>Agregando parrafo adicional.</p>
-        <p>agregando footer sencillo</p>
+        <p>Agregando footer sencillo</p>
     </body>
 </html>
