--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 <h1>Este es el títutlo atractivo, interesante y original  del post</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar las
                     cosas increibles que se pueden hacer con una rama</p>
+                    <p>Volviendo a reescribir todo el párrafo con cosas increíbles</p>
             </div>
         </div>
         <h1>Aqui vamos a hacer un blog post</h1>
