agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,8 @@
                 <p>Y este es el párrafo de inicio donde vamos a explicar las
                     cosas increibles que se pueden hacer con una rama</p>
                     <p>nuevo p&aacute;rrafo con más cosas increb&iacute;les</p>
+                    <p>Aqu&iacute; est&aacute; la foto de la gran desarrolladora Lina Karina Mart&iacute;z</p>
+                    <p><img src="imagenes/lina.jpg" alt="5%"></p>
             </div>
         </div>
         <h1>Aqui vamos a hacer un blog post</h1>
